--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                         <div class="link-icon"><i class="fa fa-home"></i></div>
                         <div>博客</div>
                     </a>
-                    <a href="#" class="link-item">
+                    <a href="https://space.bilibili.com/426337378" class="link-item">
                         <div class="link-icon"><i class="fa fa-play-circle"></i></div>
                         <div>Bilibili</div>
                     </a>
-                    <a href="#" class="link-item">
+                    <a href="https://wpa.qq.com/msgrd?v=3&uin=3774533131&site=qq&menu=yes" class="link-item">
                         <div class="link-icon"><i class="fa fa-qq"></i></div>
                         <div>QQ</div>
                     </a>
@@ -55,7 +55,7 @@
                         <div class="link-icon"><i class="fa fa-steam"></i></div>
                         <div>Steam</div>
                     </a>
-                    <a href="#" class="link-item">
+                    <a href="https://github.com/maxwell7537" class="link-item">
                         <div class="link-icon"><i class="fa fa-github"></i></div>
                         <div>Github</div>
                     </a>
@@ -129,11 +129,11 @@
             //     py:["bu'guan'le",",","xian'xie'si'ba","!"],
             // },
             {
-                ch:["TDT","是","世界上" , "最好的","rm战队","！"],
-                py:["TDT","shi","shi jie shang","zui hao de","rm zhan dui","!"],
+                ch:["TDT","是", "最好的","rm战队","！"],
+                py:["TDT","shi","zui hao de","rm zhan dui","!"],
             },{
-                ch:["先锋","是","世界上" , "最好的","组织","！"],
-                py:["xian feng","shi","shi jie shang","zui hao de","zu zhi","!"],
+                ch:["先锋","是", "最好的","组织","！"],
+                py:["xian feng","shi","zui hao de","zu zhi","!"],
             }
         ];
 
